Create layout for second page Close#5

--- a/TimeTravellers.vcxproj
+++ b/TimeTravellers.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="optionsMenu.h" />
     <ClInclude Include="TimeTravellers\Header\menu.h" />
     <ClInclude Include="TimeTravellers\Header\user.h" />
   </ItemGroup>
