--- a/TimeTravellers.vcxproj
+++ b/TimeTravellers.vcxproj
@@ -127,12 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="TimeTravellers\Header\addEvents.h" />
+    <ClInclude Include="TimeTravellers\Header\events.h" />
     <ClInclude Include="TimeTravellers\Header\menu.h" />
     <ClInclude Include="TimeTravellers\Header\user.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="TimeTravellers\Source\addEvents.cpp" />
+    <ClCompile Include="TimeTravellers\Source\events.cpp" />
     <ClCompile Include="TimeTravellers\Source\menu.cpp" />
     <ClCompile Include="TimeTravellers\Source\TimeTravellers.cpp" />
     <ClCompile Include="TimeTravellers\Source\user.cpp" />
